--- a/home/style.css
+++ b/home/style.css
@@ -1,12 +1,18 @@
 body {
     overflow: hidden;
     margin: 0;
-    font-size: 0.9rem;
-    font-family: sans-serif;
+    width: 100vw;
+    height: 100vh;
 }
 .canvas {
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
+}
+
+#open_map{
+    position: fixed;
+    z-index: 2;
+    font-size: 20px;
 }
