--- a/home/grid.css
+++ b/home/grid.css
@@ -4,6 +4,7 @@
     height: 100vh;
     grid-template-rows: 3fr 2fr;
     grid-template-columns: 1fr 1fr;
+    background-color: #abd5a2;
 }
 
 #canvas_wrap{
@@ -11,62 +12,55 @@
     grid-column: 1/3;
 }
 
-#img_completed_wrap{
-    grid-row: 2/3;
+#img_left_wrap{
+    grid-row:2/3;
     grid-column: 1/2;
-    height: 100%;
-
-    display: flex;
-    /* align-items: center; */
-    justify-content: center;
-   
+    margin: 15px 2px 5px 5px ;
+    text-align: center;
+    
 }
 
-#img_completed{
-    max-width: 60%;
-    max-height: 95%;
-    object-fit: contain;
-    border: 3px solid dodgerblue;
-}
-
-
-#imgs_right_wrap{
+#img_right_wrap{
     grid-row: 2/3;
     grid-column: 2/3;
-    display: grid;
-    grid-template-rows: 80% 20%;
-
-    height: 100%;
+    margin: 15px 5px 5px 2px;
+    text-align: center;
 }
 
-#img_search_chara_wrap{
-    grid-row: 1/2;
-    display: flex;
-    align-items: center;
-    height: 100%;
-    justify-content: center;
+#img_go_map{
+    max-width: 90%;
+    max-height: 100%;
+    border: 3px solid #3f7132;
+}
+#img_go_ar{
+    max-width: 90%;
+    border: 3px solid #3f7132;
+}
+
+#img_go_hatena{
+    max-width: 90%;
+    height: 30%;
+    border: 3px solid #3f7132;
+    background-color: #fff;
 }
 
 #img_menu_wrap{
-    grid-row: 2/3;
+    width: 90%;
+    height: 30%;
     display: flex;
+    justify-content: space-between;
+    margin-left: 5px;
+}
+
+#img_go_suihanki{
+    border: 3px solid #3f7132;
+    width: 90%;
     height: 100%;
-    /* align-items: center; */
-    justify-content: center;
+    background-color: #fff;
 }
-
-
-#img_search_chara{
-    /* max-width:95%;
-    max-height:95%; */
-    width: 95%;
-    height: 95%;
-    border: 3px solid tomato;
-    font-size: 30px;
-}
-
-#img_menu{
-    max-width: 95%;
-    max-height: 95%;
-    border: 3px solid black;
+#img_go_dictionary{
+    border: 3px solid #3f7132;
+    width: 90%;
+    height: 100%;
+    background-color: #fff;
 }
