--- a/home/style.css
+++ b/home/style.css
@@ -4,15 +4,14 @@ body {
     width: 100vw;
     height: 100vh;
 }
+
+img{
+    object-fit: contain;
+}
+
 .canvas {
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
-}
-
-#open_map{
-    position: fixed;
-    z-index: 2;
-    font-size: 20px;
 }
