--- a/componets/LoginModal.css
+++ b/componets/LoginModal.css
@@ -46,10 +46,21 @@
 }
 
 .modal_content{
+    position: relative;
     background-color: #abd5a2;
     border-radius: 5px;
 }
 
 .characterImage{
     width: 100%;
+}
+
+/* characterImageに被せる */
+.gotImage{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
 }
