--- a/adventure/style.css
+++ b/adventure/style.css
@@ -1,9 +1,12 @@
 body {
     overflow: hidden;
     margin: 0;
+    padding: 0;
     font-size: 0.9rem;
-    font-family: sans-serif;
+    position: relative;
+    font-family: Arial, sans-serif;
 }
+
 .device-orien-modal {
     z-index: 1;
     display: flex;
