--- a/adventure/style.css
+++ b/adventure/style.css
@@ -1,9 +1,12 @@
 body {
     overflow: hidden;
     margin: 0;
+    padding: 0;
     font-size: 0.9rem;
-    font-family: sans-serif;
+    position: relative;
+    font-family: Arial, sans-serif;
 }
+
 .device-orien-modal {
     z-index: 1;
     display: flex;
@@ -57,3 +60,44 @@ body {
 
     font-size: 20px;
 }
+
+
+/*******ここから弁当箱のcss********/
+#lunchBox {
+    position: fixed;
+    top: 75%;
+    max-width: 100vw;
+    max-height: 100vh;
+    z-index: 20;
+    
+}
+
+/*弁当箱後ろの部分(LB=LunchBox)*/
+#LBback{
+    position: fixed;
+    width: 100%;
+    z-index: 21;
+}
+
+/*弁当箱の中身*/
+#LBcontents {
+    position: fixed;
+    z-index: 22;
+    height: 100%;
+    width: 90%;
+    margin: 0 5%;
+}
+
+/*具材*/
+#LBcontents img{
+    width: 33%;
+}
+
+/* 弁当箱の前の部分 */
+#LBfront{
+    position: fixed;
+    width: 100%;
+    z-index: 23;
+}
+
+
