class canvas ->  id canvas

--- a/adventure/style.css
+++ b/adventure/style.css
@@ -39,13 +39,16 @@ body {
 .is-hidden {
     display: none;
 }
-.canvas {
+
+
+#canvas {
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
 }
-.camera {
+
+#camera {
     position: fixed;
     top: 0;
     left: 0;
