--- a/componets/NewGuzaiData.css
+++ b/componets/NewGuzaiData.css
@@ -60,7 +60,7 @@
     width: 70%;
     background-color: #ffe179;
     border-radius: 15px;
-    color: rgb(88, 121, 63);;
+    color: rgb(88, 121, 63);
     margin: 0 auto;
 }
 
